--- a/index.html
+++ b/index.html
@@ -1105,8 +1105,8 @@
     </div>
 
     <div class="videos">
-      <h3 style="color:white;">Dernières vidéos</h3>
-      <div class="slider">
+  <h3 style="color:#A5FF8D; text-shadow: 0 0 20px rgba(165,255,140,0.4);">Dernières vidéos</h3>
+  <div class="slider">
         <a href="https://www.youtube.com/watch?v=example1" target="_blank" class="video-card" style="background-image: url('https://i.postimg.cc/cJpPR066/OMjpg.jpg');">
           <div class="play-icon"><div class="play-triangle"></div></div>
           <div class="video-info"><p style="color:white;">🎮 Présentation de la Team WOODX E-Sport</p><span></span></div>
@@ -1451,3 +1451,4 @@
 </script>
 </body>
 </html>
+
