--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
 
     <!-- Carte 10 -->
     <div class="roster-card">
-        <img src="https://i.postimg.cc/ZKQ1jbvf/baxsle.png" alt="Basxle" class="roster-avatar">
+        <img src="https://i.postimg.cc/NMc59F9H/A7386576-AF03-4ADC-BC41-2C8837A46FB2.png" alt="Basxle" class="roster-avatar">
         <div class="roster-name">Basxle</div>
         <div class="roster-role">Training Center</div>
         <p class="roster-bio">Training Center Pour la WDX Esport.</p>
@@ -1456,4 +1456,5 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 
