--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
         <p class="roster-bio">Training Center Pour la WDX Esport.</p>
         <div class="roster-tags">
             <span class="roster-tag">Traning Center</span>
-            <span class="roster-tag">Fragger</span>
+            <span class="roster-tag">Igl</span>
             <span class="roster-tag">0PR</span>
         </div>
         <div class="roster-social">
@@ -1456,5 +1456,6 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 
 
