--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script type="text/javascript">
     (function(){
-        emailjs.init({ publicKey: "yD5Un5feCOKbe6Pp4" });
+        emailjs.init({ publicKey: "JhmrzFurAZhVqGiYC" });
     })();
     document.getElementById('recruitmentForm').addEventListener('submit', function(event) {
         event.preventDefault();
@@ -1156,7 +1156,7 @@
         const originalText = btn.textContent;
         btn.disabled = true;
         btn.textContent = "Envoi en cours...";
-        emailjs.sendForm('service_rkbkwkj', 'template_1napji6', this)
+        emailjs.sendForm('service_m9gic4v', 'template_n5jgx85', this)
             .then(() => {
                 alert("Candidature envoyée avec succès !\nOn te recontacte très vite sur Discord.");
                 this.reset();
@@ -1277,4 +1277,5 @@
 </script>
 </body>
 </html>
+
 
