--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
         <div class="roster-name">NYRR</div>
         <div class="roster-role">Player Esport</div>
         <p class="roster-bio">Joueur fortnite Esport pour la WOODX Esport.</p>
-        <div class="roster-tags"><span class="roster-tag">Player Esport</span><span class="roster-tag">Igl</span><span class="roster-tag">30PR</span></div>
+        <div class="roster-tags"><span class="roster-tag">Esport</span><span class="roster-tag">Igl</span><span class="roster-tag">30PR</span></div>
         <div class="roster-social">
             <a href="https://www.twitch.tv/lunary_nyrr"><i class="fab fa-twitch"></i></a>
             <a href="https://www.youtube.com/@Nyrr.Off12"><i class="fab fa-youtube"></i></a>
@@ -1133,6 +1133,7 @@ refait ce code garde les <!-- RECRUTEMENT -->
 </script>
 </body>
 </html>
+
 
 
 
