--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     <div class="roster-card">
         <img src="https://i.postimg.cc/CMcc2nTg/b1b5f0730d6d0a4f27f30bedb839f8ab.jpg" alt="Nyrr" class="roster-avatar">
         <div class="roster-name">NYRR</div>
-        <div class="roster-role">Player Esport</div>
+        <div class="roster-role">Esport</div>
         <p class="roster-bio">Joueur fortnite Esport pour la WOODX Esport.</p>
         <div class="roster-tags"><span class="roster-tag">Esport</span><span class="roster-tag">Igl</span><span class="roster-tag">30PR</span></div>
         <div class="roster-social">
@@ -1133,6 +1133,7 @@ refait ce code garde les <!-- RECRUTEMENT -->
 </script>
 </body>
 </html>
+
 
 
 
