--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
       </div>
     </div>
 </section>
-refait ce code garde les <!-- RECRUTEMENT -->
+    <!-- RECRUTEMENT -->
 <section class="section container" id="recrutement">
     <h2 style="color:#A5FF8D; text-shadow: 0 0 20px rgba(165,255,140,0.4);">NOUS REJOINDRE ?</h2>
     <p style="color:white;">Le recrutement est ouvert ! Postule maintenant et montre-nous ton niveau.</p>
@@ -1133,6 +1133,7 @@ refait ce code garde les <!-- RECRUTEMENT -->
 </script>
 </body>
 </html>
+
 
 
 
