--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
         </div>
     </div>
     <div class="roster-card">
-        <img src="https://i.postimg.cc/28Z8YKY5/0268177b1381bccf4c17edf65c0c4ed7.jpg" alt="Uzer" class="roster-avatar">
+        <img src="https://i.postimg.cc/nzvWXP2z/IMG-0129.jpg" alt="Uzer" class="roster-avatar">
         <div class="roster-name">Uzer</div>
         <div class="roster-role">Esport</div>
         <p class="roster-bio">Joueur fortnite Esport pour la WOODX Esport.</p>
@@ -1146,3 +1146,4 @@
 </script>
 </body>
 </html>
+
