--- a/index.html
+++ b/index.html
@@ -700,6 +700,25 @@
     </div>
 </div>
 
+    <!-- ESPOIR -->
+<section class="section container roster-section" style="margin-top: 80px;">
+    <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4); text-align: center; border-bottom: 2px solid rgba(255,192,203,0.2); padding-bottom: 10px;">ESPOIR</h2>
+</section>
+<div class="roster-grid">
+    <div class="roster-card">
+        <img src="https://i.postimg.cc/pT4CqW11/98d976f38b2e1c35e46ceb9e0a8066ce.jpg" alt="lil__Many" class="roster-avatar">
+        <div class="roster-name">lil__Many</div>
+        <div class="roster-role">Espoir</div>
+        <p class="roster-bio">Joueurs Espoir pour la WoodX Esport.</p>
+        <div class="roster-tags"><span class="roster-tag">Espoir</span><span class="roster-tag">Fragger</span><span class="roster-tag">34PR</span></div>
+        <div class="roster-social">
+            <a href="https://www.twitch.tv/lil__many"><i class="fab fa-twitch"></i></a>
+            <a href="https://www.youtube.com/channel/UCStyAAkMP5UERqqwvJi4Raw"><i class="fab fa-youtube"></i></a>
+            <a href="https://x.com/ZEN_mojix"><i class="fab fa-twitter"></i></a>
+        </div>
+    </div>
+</div>
+
 <!-- ACTUALITÉS -->
 <section class="section container" id="actualites">
     <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4);">ACTUALITÉS</h2>
@@ -987,5 +1006,6 @@
 </script>
 </body>
 </html>
+
 
 
