--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script type="text/javascript">
     (function(){
-        emailjs.init({ publicKey: "6L-ydM-QqXPbFZcvj" });
+        emailjs.init({ publicKey: "JhmrzFurAZhVqGiYC" });
     })();
     document.getElementById('recruitmentForm').addEventListener('submit', function(event) {
         event.preventDefault();
@@ -891,7 +891,7 @@
         const originalText = btn.textContent;
         btn.disabled = true;
         btn.textContent = "Envoi en cours...";
-        emailjs.sendForm('service_jmutfi8', 'template_7h4yxpp', this)
+        emailjs.sendForm('service_m9gic4v', 'template_n5jgx85', this)
             .then(() => {
                 alert("Candidature envoyée avec succès !\nOn te recontacte très vite sur Discord.");
                 this.reset();
@@ -1006,6 +1006,7 @@
 </script>
 </body>
 </html>
+
 
 
 
