--- a/index.html
+++ b/index.html
@@ -649,11 +649,9 @@
     <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4);">ROSTER WOODX</h2>
     <p style="color:#ffc0cb; opacity:0.9;">Rencontrez les talents qui composent notre team Fortnite compétitive</p>
 </section>
-
 <section class="section container roster-section" style="margin-top: 50px;">
     <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4); text-align: center; border-bottom: 2px solid rgba(255,192,203,0.2); padding-bottom: 10px;">ESPORT</h2>
 </section>
-
 <div class="roster-grid">
     <div class="roster-card">
         <img src="https://i.postimg.cc/CMcc2nTg/b1b5f0730d6d0a4f27f30bedb839f8ab.jpg" alt="Nyrr" class="roster-avatar">
@@ -680,11 +678,9 @@
         </div>
     </div>
 </div>
-
 <section class="section container roster-section" style="margin-top: 80px;">
     <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4); text-align: center; border-bottom: 2px solid rgba(255,192,203,0.2); padding-bottom: 10px;">ACADEMIQUE</h2>
 </section>
-
 <div class="roster-grid">
     <div class="roster-card">
         <img src="https://i.postimg.cc/Df9NbC9g/Clezz.jpg" alt="Clezz" class="roster-avatar">
@@ -699,7 +695,6 @@
         </div>
     </div>
 </div>
-
     <!-- ESPOIR -->
 <section class="section container roster-section" style="margin-top: 80px;">
     <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4); text-align: center; border-bottom: 2px solid rgba(255,192,203,0.2); padding-bottom: 10px;">ESPOIR</h2>
@@ -717,7 +712,30 @@
             <a href="https://x.com/ZEN_mojix"><i class="fab fa-twitter"></i></a>
         </div>
     </div>
+    <div class="roster-card">
+        <img src="https://i.postimg.cc/xCLj1kZr/5ab9e908c956dea7cca1cd317e6307b4.jpg" alt="Eternity" class="roster-avatar">
+        <div class="roster-name">Eternity</div>
+        <div class="roster-role">Espoir</div>
+        <p class="roster-bio">Joueurs Espoir pour la WoodX Esport.</p>
+        <div class="roster-tags"><span class="roster-tag">Espoir</span><span class="roster-tag">Igl</span><span class="roster-tag">269PR</span></div>
+        <div class="roster-social">
+            <a href="https://www.twitch.tv/eternity_on_fire"><i class="fab fa-twitch"></i></a>
+            <a href="https://youtube.com/@eternity200iq?si=TGOjza52tPAsmCKF"><i class="fab fa-youtube"></i></a>
+            <a href="https://x.com/r3f_eternity?s=21"><i class="fab fa-twitter"></i></a>
+        </div>
+    </div>
+    <div class="roster-card">
+        <img src="https://i.postimg.cc/Nf9T7DSW/bfe9609961360885fe3a8a40b74b711b.jpg" alt="Noctyx" class="roster-avatar">
+        <div class="roster-name">Noctyx</div>
+        <div class="roster-role">Espoir</div>
+        <p class="roster-bio">Joueurs Espoir pour la WoodX Esport.</p>
+        <div class="roster-tags"><span class="roster-tag">Espoir</span><span class="roster-tag">Igl</span><span class="roster-tag">317PR</span></div>
+        <div class="roster-social">
+            <a href="https://www.twitch.tv/noctyyxx"><i class="fab fa-twitch"></i></a>
+        </div>
+    </div>
 </div>
+
 
 <!-- ACTUALITÉS -->
 <section class="section container" id="actualites">
@@ -1006,6 +1024,7 @@
 </script>
 </body>
 </html>
+
 
 
 
