--- a/index.html
+++ b/index.html
@@ -847,11 +847,10 @@
     </div>
 </section>
 
-<section id="recrutement" style="max-width:760px; margin: 60px auto 0;">
-  <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4); text-align:center;">
-    NOUS REJOINDRE ?
-  </h2>
-  <p style="color:white; text-align:center;">Le recrutement est ouvert ! Postule maintenant.</p>
+<section class="section container" id="recrutement">
+    <h2 style="color:#ffc0cb; text-shadow: 0 0 20px rgba(255,192,203,0.4);">NOUS REJOINDRE ?</h2>
+    <p style="color:white;">Le recrutement est ouvert ! Postule maintenant et montre-nous ton niveau.</p>
+    <form class="recruitment-form" id="recruitmentForm">
   <form id="recruitmentForm" style="display:grid; gap:22px;">
     <input name="pseudo" placeholder="Pseudo Epic Games" required>
     <input type="number" name="age" min="13" placeholder="Âge" required>
@@ -1059,6 +1058,7 @@
 </script>
 </body>
 </html>
+
 
 
 
