--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <button class="btn-secondary" onclick="scrollToSection('#roster')">Voir le Roster</button>
         </div>
     </div>
-    <img src="https://i.postimg.cc/P55YQjSV/telecharger.png" alt="Logo WoodX" class="globe-img">
+    <img src="https://i.postimg.cc/y8GRtFbs/logo.png" alt="Logo WoodX" class="globe-img">
 </section>
 
 <section class="section container" id="avantages">
@@ -1058,6 +1058,7 @@
 </script>
 </body>
 </html>
+
 
 
 
