--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Roboto', sans-serif;
             color: #fff;
             overflow-x: hidden;
-            background-image: url('https://i.postimg.cc/nhfbk5HL/Design-sans-titre.png');
+            background-image: url('https://i.postimg.cc/W4r77Wb9/Design-sans-titre.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
@@ -1058,6 +1058,7 @@
 </script>
 </body>
 </html>
+
 
 
 
